# portifolio-dev

./: .dockerignore  .gitignore  README.md
.github/workflows/: github_ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/config/: README.md  env-sample
backend/mysite/: settings.py  urls.py
backend/mysite/base/: urls.py  views.py
backend/mysite/base/migrations/: 0001_initial.py
backend/mysite/base/static/base/css/: style.css
backend/mysite/base/static/css/: style.css
backend/mysite/base/templates/base/: apresentation.html  base.html  footer.html  home.html
backend/mysite/base/templates/registration/: login.html
backend/mysite/base/tests/: test_home.py  test_manager.py
backend/mysite/cursos/: admin.py  context_processors.py  facade.py  urls.py
backend/mysite/cursos/migrations/: 0001_initial.py
backend/mysite/cursos/templates/cursos/: curso_detalhe.html  indice.html
backend/test_docker/: README.md  docker-compose.yml
docker/: docker-compose.yml  nginx.conf
portifolio_docker/: docker-compose.yml  nginx.conf
